Still need to add search bar and fix card stretching. Everything else works.

--- a/part2.css
+++ b/part2.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: Tahoma, Geneva, Verdana, sans-serif;
+    
 }
 /* navbar styling 
    Build flex-box then place other flex-boxes inside, and then move/adjust the nested flex-boxes within parent box.
@@ -50,43 +51,60 @@ a:hover {
 
 /* Panel stylings. Same as above. */
 
-.main-container {
+.top-container {
+    border: solid black 2px;
     display: flex;
-    height: 60vh;
-    gap: 2vw;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    height: 100%;
+    flex-basis: content;
+    gap: 10px;
+    padding-top: 3vh;
+
 }
 
-.left-container {
+/* .bottom-container {
+    border: solid black 2px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    height: 100%;
+    flex-basis: content;
+    gap: 10px;
+    
+} */
+
+.card {
+    display: flex;
+    justify-content: center;   
     flex-direction: column;
     border: solid 2px black;
-    width: 60vw;
-    height: 50vh;
-    gap: 2vh;
+    gap: 10px;
+    height: 20%;
+    width: 25%;
+    padding: 1%;   
+    contain: content;
 }
 
-.top {
-    border: solid 2px black;
-    height: 30%;
+img {
+    width: 180px;
 }
 
-.middle {
-    border: solid 2px black;
-    height: 30%;
+.profile {
+    width: 15%;
+    justify-content: space-evenly;
 }
 
-.bottom {
-    border: solid 2px black;
-    height: 30%;
+#profile-link {
+    
+   
 }
 
-.box {
-    border: solid 2px black;
+#profile-picture {
+    
+    height: 30px;
+    width: 30px;
 }
 
-.right-container {
-    display: flex;
-    justify-content: flex-end;
-    border: solid 2px black;
-    width: 40vw;
-}
